@@ -10,6 +10,9 @@ static char vers_id[] = "rules.c : v5.0p3 Alec Muffett 20 May 1993";
 
 #include "config.h"
 #include <string.h>
+#ifdef HAVE_INTTYPES_H
+#include <inttypes.h>
+#endif
 #include "crack.h"
 #include "packer.h"
 
